Added support for running back scripts on fialed password attempt

--- a/data/lightdm-mini-greeter.conf
+++ b/data/lightdm-mini-greeter.conf
@@ -13,6 +13,8 @@ password-label-text = Password:
 invalid-password-text = Invalid Password
 # The text shown at the top of the box
 title-label-text = Signin is required
+# Path to a bash script to be ran on invalid password. Useful for recording video when someone unauthorized attempts to log into your computer
+bash-script = /dev/null
 # Show a blinking cursor in the password input.
 show-input-cursor = true
 # The text alignment for the password input. Possible values are:
